# battery_cell_tests

./: CMakeLists.txt  README.md  package.xml
can_pick_and_place/: test_1.yaml  test_1_RL_params.yaml
can_pick_and_place/config/: kuka_rosdyn_config.yaml  real_skills_executer_config.yaml  simulation_skills_executer_config.yaml  simulation_skills_learning_config.yaml  skills_arbitrator_config.yaml
can_pick_and_place/config/params/: real_RL_params.yaml  real_TF_params.yaml  simulation_RL_params.yaml  simulation_TF_params.yaml
can_pick_and_place/config/trees/: can_pick.xml  can_pick_and_place.xml  can_pick_and_place_learning.xml  can_place.xml  init_tree.xml
can_pick_and_place/data/: simulation_tests.ods  test_1.yaml  test_1_RL_params.yaml
can_pick_and_place/launch/: camera_activation.launch  camera_info.launch  camera_srvs_start.launch  can_spawner.launch  load_test_params.launch  real_can_pick_and_place_env.launch  rosdyn_node.launch  run_real_opt_tests.launch  run_simulation_opt_tests.launch  simulation_can_pick_and_place_env.launch  skills_servers.launch  visual_detection.launch
can_pick_and_place/src/: can_spawner.py  rosparam_to_rostopic.py  run_opt_tests.py  visual_detection.py
can_pick_and_place/src/python_classes/: personal_class.py  real_personal_class.py
config/: RL_params.yaml  TF_params.yaml
