<?xml version="1.0"?>
<package format="2">
  <name>battery_cell_tests</name>
  <version>0.0.0</version>
  <description>The battery_cell_tests package</description>

  <maintainer email="gauss@todo.todo">gauss</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>rospy</depend>
  <depend>behaviortree_cpp</depend>
  <depend>action_learning_tests</depend>
  <depend>std_msgs</depend>
  <depend>skills_util</depend>
  <depend>skills_executer_msgs</depend>
  <depend>skills_arbitrator_msgs</depend>
  <depend>skills_learning_msgs</depend>
  <depend>skills_util_msgs</depend>
  <depend>manipulation_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>gazebo_msgs</depend>
  <depend>pybullet_utils</depend>
  <depend>tf</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
